# ratesync-contracts

./: .gitignore  Cargo.toml  Makefile  README.md
.github/workflows/: main.yml
artifacts/: checksums.txt  checksums_intermediate.txt  liquid_stake_rate.wasm  osmosis_pool_ratesync.wasm
contracts/liquid-stake-rate/: Cargo.toml  README.md
contracts/liquid-stake-rate/examples/: schema.rs
contracts/liquid-stake-rate/src/: contract.rs  error.rs  helpers.rs  lib.rs  msg.rs
contracts/osmosis-pool-ratesync/: Cargo.toml  README.md
contracts/osmosis-pool-ratesync/examples/: schema.rs
contracts/osmosis-pool-ratesync/src/: contract.rs  error.rs  helpers.rs  msg.rs  state.rs
contracts/redemption-rate/: Cargo.toml  README.md
contracts/redemption-rate/examples/: schema.rs
contracts/redemption-rate/src/: contract.rs  helpers.rs  msg.rs  state.rs
network/: init.sh
network/hermes/: config.toml  restore-keys.sh  variables.sh
network/relayer/interchain-acc-config/: rly-init.sh  rly-start.sh
network/relayer/interchain-acc-config/chains/: osmo-testing.json  wasmd-1.json
network/relayer/interchain-acc-config/paths/: wasm-osmo.json
scripts/: config.example.sh  deploy-testnet.sh
scripts/osmosis/: start.sh
scripts/testnet/: add_pool.sh  instantiate_contract.sh  query_all_pools.sh  query_config.sh  query_historical.sh  query_latest.sh  remove_pool.sh  store_contracts.sh  vars.sh
scripts/wasmd/: start.sh
scripts/wasmd/template/.wasmd/: keyhash  validator.info
scripts/wasmd/template/.wasmd/config/: genesis.json  node_key.json  priv_validator_key.json
scripts/wasmd/template/.wasmd/config/gentx/: gentx-374800317185c7b7bca0e0540372a216b1b2f985.json
tests/: .eslintrc.json  .prettierignore  README.md  package-lock.json  package.json
tests/src/: config.ts  controller.ts  cosmwasm.spec.ts  utils.ts
tests/src/bindings/: RedemptionRate.client.ts  RedemptionRate.types.ts
