[package]
name = "osmosis-pool-ratesync"
version = "0.1.0"
authors = ["Nabarun Sarkar <nabsarkar@gmail.com>"]
edition = "2021"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[package.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)":/code \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/code/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/rust-optimizer:0.14.0
"""

[dependencies]
ratesync = { path = "../../packages/ratesync", version = "0.1.0" }

cosmwasm-schema = "1.3.3"
cosmwasm-std = "1.3.3"
cosmwasm-storage = "1.3.3"
cw-storage-plus = "1.1.0"
cw2 = "1.1.0"
schemars = "0.8.12"
osmosis-std = { git = "https://github.com/Stride-Labs/osmosis-rust.git", branch = "sam/fix-stableswap-type"}
prost = { version = "0.11.5", default-features = false, features = ["prost-derive"] }
serde = { version = "1.0.185", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.47" }

[dev-dependencies]
cw-multi-test = "0.16.2"
